<resources>
    <string name="app_name">Project</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember">Remember me</string>
    <string name="create_account">Create new account</string>

</resources>
